--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
@@ -9,7 +10,6 @@
   "bin": {
     "login-lecture": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
